<resources>
    <string name="app_name">HR</string>

    <string name="StartLabel">Start</string>
    <string name="StopLabel">Stop</string>
    <string name="ResetLabel">Reset</string>
    <string name="HeartRate">Heart Rate</string>
    <string name="HeartRateStatus">HR Status</string>
    <string name="HRV">HRV</string>
    <string name="Ibi">IBI</string>
    <string name="IbiStatus">IBI Status</string>
    <string name="Details">details >></string>
    <string name="TxtPercent">%</string>

    <string name="StatusDefaultValue">Press Start to initiate measurement. Press stop to pause it.</string>
    <string name="StatusStartedOnce">Press Start to resume measurement. Press stop to pause it.</string>
    <string name="HeartRateDefaultValue">0</string>
    <string name="HRVDefaultValue">0.00</string>
    <string name="TimeDefaultValue">00:00</string>
    <string name="HeartRateStatusDefaultValue">0</string>
    <string name="IbiStatusDefaultValue">1</string>
    <string name="IbiDefaultValue">0</string>

    <string name="MeasureStart">Measure started</string>
    <string name="MeasureStop">Measure paused</string>
    <string name="TimerReset">Session ended</string>

    <string name="ConnectedToHs">Connected to Health Tracking Service.</string>
    <string name="ConnectionError">Could not connect to Health Tracking Service. Check error log.</string>
    <string name="HealthPlatformVersionIsOutdated">"Health Platform version is outdated or not installed.</string>
    <string name="NoPermission">Permissions Check Failed.</string>
    <string name="SdkPolicyError">SDK Policy denied.</string>
    <string name="PermissionDeniedPermanently">Permissions denied. Grant permissions in watch settings and start application again.</string>
    <string name="PermissionDeniedRationale">Body Sensors permission is required to make a measurement.</string>
    <string name="MeasurementFailed">Measurement failed. Keep your watch tightly on and try again.</string>

    <string name="NoHrSupport">Heart Rate not supported on this device.</string>
    <string name="BodySensors">android.permission.BODY_SENSORS</string>

    <string name="ExtraHr">Hr</string>
    <string name="ExtraHrStatus">HrStatus</string>
    <string name="ExtraIbi">Ibi</string>
    <string name="ExtraIbiOld">IbiOld</string>
    <string name="ExtraQualityIbi">QualityIbi</string>
    <string name="HRVInvalid">HRV Invalid</string>
    <string name="ExtraIsMeasuring">Measuring</string>
    <string name="ExtraStarted">Started</string>
    <string name="ExtraReset">ResetSignal</string>
    <string name="Paused">Paused</string>
    <string name="TxtTime">Time:</string>

    <string name="DetailsStatusRunning">Measuring…</string>
    <string name="DetailsStatusStopped">Measurement paused.</string>
    <string name="DetailsStatusNotStarted">Measurement not started.</string>
    <string name="DetailsStatusFindHr">Successful heart rate measurement.</string>
    <string name="DetailsStatusAttached">Wearable is attached.</string>
    <string name="DetailsStatusMoveDetection">Wearable move detection.</string>
    <string name="DetailsStatusDetached">Wearable is detached.</string>
    <string name="DetailsStatusLowReliability">PPG signal is weak.</string>
    <string name="DetailsStatusVeryLowReliability">PPG signal is too weak.</string>
    <string name="DetailsStatusNoDataFlush">flush() is called but no data.</string>

    <string name="LoginTitle">Login</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>

    <string name="ConfigTitle">Configuration</string>
    <string name="IP">IP Address</string>
    <string name="DefaultIP">192.168.1.1</string>
    <string name="Continue">Continue</string>

</resources>