<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".DetailsActivity"
    tools:deviceIds="wear">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/txtStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DetailsStatusRunning"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintHorizontal_bias="0.531"
            app:layout_constraintStart_toEndOf="@id/guideline_left"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.123" />


        <TextView
            android:id="@+id/txtTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TxtTime"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.462"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.929" />

        <TextView
            android:id="@+id/txtTimeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HeartRateDefaultValue"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.574"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.929" />

        <TextView
            android:id="@+id/txtHeartRateName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HeartRate"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.251"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.281" />

        <TextView
            android:id="@+id/txtIbiName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ibi"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.442"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.485" />

        <TextView
            android:id="@+id/txtIbiStatusName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/IbiStatus"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.283"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.587" />

        <TextView
            android:id="@+id/txtHeartRateStatusName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HeartRateStatus"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.275"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.383" />


        <TextView
            android:id="@+id/txtHRV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DetailsHRVLabel"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.747" />

        <TextView
            android:id="@+id/txtValueHRV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HeartRateDefaultValue"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.854" />

        <TextView
            android:id="@+id/txtHeartRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HeartRateDefaultValue"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.715"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.281" />

        <TextView
            android:id="@+id/txtHeartRateStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HeartRateStatusDefaultValue"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.715"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.383" />

        <TextView
            android:id="@+id/txtIbi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/IbiDefaultValue"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.715"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.485" />

        <TextView
            android:id="@+id/txtIbiStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/IbiStatusDefaultValue"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.715"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.587" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="32dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="32dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.wear.widget.BoxInsetLayout>

